--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 dist: trusty
-sudo: false
+sudo: true
 
 language: cpp
-
+before_install:
+  -sudo apt install g++
+  -sudo apt install libboost-dev # For Boost
+  -sudo apt install libssl-dev # For OpenSSL
 script:
   - cmake -H. -Bbuild
   - cmake --build build
